--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jade": "*",
     "facebook-node-sdk": "0.1.0",
     "mongoose": "3.x",
-    "echojs": "~0.1.3"
+    "echojs": "~0.1.3",
+    "async": "~0.2.5"
   },
   "engines": {
     "node": "0.8.14 ",
